Change-Id: I28538c0604da0a8f8a693acb9c035d0f86b7b641

--- a/src/org/ana/wcmp/context/ServerContext.properties
+++ b/src/org/ana/wcmp/context/ServerContext.properties
@@ -1,4 +1,4 @@
-webroot_path=115.154.109.213
+webroot_path=*serverIP*
 wcmp_basic_bind_uri=/
 
 wcmp_token=myToken
@@ -30,3 +30,5 @@ wcmp_order_out_of_range_type=0
 wcmp_order_out_of_range_id=8
 wcmp_user_locked_type=0
 wcmp_user_locked_id=9
+
+inquiry_auth_key=*inquirykey*
